<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.edo.eno.rikosbeta.activity.LoginActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="36dp"
        android:paddingRight="36dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/rikos_font" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:hint="@string/hint_uname"
                android:drawableStart="@drawable/ic_face"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            app:passwordToggleEnabled="true" >

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_fingerprint"
                android:hint="@string/hint_pw"
                android:imeOptions="actionDone|actionSend"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@color/colorResistance"
            android:textColor="@android:color/primary_text_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/hint_register"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

</ScrollView>