<?xml version="1.0" encoding="utf-8"?>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cvKost"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="122dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:id="@+id/ivFoto"
            android:src="@drawable/rikos_icon"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_kost"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/tvNama"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alamat_kost"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:maxLines="1"
                android:id="@+id/tvAlamat"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/harga_kost"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorAccent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/tvHarga"/>

        </LinearLayout>

    </LinearLayout>

    </android.support.v7.widget.CardView>