<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="24dp">



            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    style="@style/Widget.CardContent"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/info"
                        android:textAllCaps="true"
                        android:drawableStart="@drawable/ic_info"
                        android:drawablePadding="5dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginBottom="5dp"
                        android:background="#ffe5e5e5"/>

                    <TextView
                        android:id="@+id/detailHarga"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/harga_kost"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/detailLuas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/luas_kamar"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/detailStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/status_kamar"
                        android:textSize="18sp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_margin"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/fasilitas"
                        android:textAllCaps="true"
                        android:drawableStart="@drawable/ic_tidur"
                        android:drawablePadding="5dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginBottom="5dp"
                        android:background="#ffe5e5e5"/>

                    <TextView
                        android:id="@+id/detailDeskripsi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/honyok_honyok"
                        android:textSize="18sp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_margin"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp"
                    android:paddingBottom="58dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/kontak"
                        android:textAllCaps="true"
                        android:drawableStart="@drawable/ic_person_pin_circle"
                        android:drawablePadding="5dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginBottom="5dp"
                        android:background="#ffe5e5e5"/>

                    <TextView
                        android:id="@+id/detailOwner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/owner_kost"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/detailAlamat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/alamat_kost"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/detailTelepon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/telepon_kost"
                        android:textSize="18sp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end"
        android:src="@drawable/ic_share"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"/>

    <!--This is the main frame layout in which I set hight, background and align it to the bottom-->
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/bottombar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="#2962ff" >
        <!-- android:elevation="4dp" -->


        <!--This linear layout is a wrapper for all the button which are added.-->
        <!--It should be horizontal and change weightsum to the number of buttons you want to add-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3">

            <!--All these are just wrapper for image view and text view that will act as button-->
            <!--They have a vertical layout, center gravity and clickable true-->
            <!--They also have layout weight as 1 to divide space equally amongst buttons-->
            <!--Also enable haptic feedback if you want to create touch vibration on click-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="Epon"
                android:gravity="center"
                android:hapticFeedbackEnabled="true"
                android:orientation="vertical">

                <!-- A text view pointing to  drawable-->
                <!--make sure to make clickable false-->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:src="@drawable/ic_call"
                    />

                <!--A txt view to add text below the image-->
                <!--Align it to the center and change size as you find fit-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Telepon"
                    android:clickable="false"
                    android:id="@+id/textTelepon"
                    android:textSize="15sp"
                    android:textStyle="normal|bold"
                    android:textColor="?android:attr/textColorPrimaryInverse" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:hapticFeedbackEnabled="true"
                android:onClick="Sms"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:src="@drawable/ic_chat"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="SMS Owner"
                    android:clickable="false"
                    android:id="@+id/textSMS"
                    android:textSize="15sp"
                    android:textStyle="normal|bold"
                    android:textColor="?android:attr/textColorPrimaryInverse" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:hapticFeedbackEnabled="true"
                android:onClick="Navigasi"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:src="@drawable/ic_directions"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Navigasi"
                    android:clickable="false"
                    android:id="@+id/textNavigasi"
                    android:textSize="15sp"
                    android:textStyle="normal|bold"
                    android:textColor="?android:attr/textColorPrimaryInverse" />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>


</android.support.design.widget.CoordinatorLayout>